# rusty-toolbox

./: .gitignore  Cargo.toml  README.md  app_config.yaml  build_app.sh
app-chess/: Cargo.toml  icon.icns
app-chess/examples/: pgn.rs
app-chess/resources/: hello.pgn  hello2.pgn  test.pgn
app-chess/src/: lib.rs  main.rs
app-chess/src/ai/: mod.rs  moves.rs  score.rs
app-chess/src/pgn/: export.rs  import.rs  mod.rs
app-chess/src/utils/: convert.rs  mod.rs  moves.rs  score.rs
app-chess/tests/: best_moves.rs  pgn_test.rs
app-cli-audio/: Cargo.toml
app-cli-audio/examples/: cpal.rs  kura.rs  muffled.rs  rodio.rs
app-cli-convert-png-to-icns/: Cargo.toml
app-cli-convert-videos/: Cargo.toml  icon.icns
app-cli-convert-videos/src/: lib.rs
app-cli-excel-to-csv/: Cargo.toml
app-cli-overlay-text/: Cargo.toml
app-cli-overlay-text/src/: lib.rs
app-cli-show-usb-devices/: Cargo.toml
app-cli-show-usb-devices/src/: lib.rs
app-cli-show-usb-devices/src/bt/: mod.rs
app-cli-show-usb-devices/src/usb/: mod.rs
app-convert-png-to-icns/: Cargo.toml  icon.icns
app-convert-png-to-icns/src/: lib.rs
app-sample-custom-egui-frame/: Cargo.toml
app-sample-custom-egui-frame/src/: main.rs
app-ui-bmi-for-dummies/: Cargo.toml
app-ui-cute/: Cargo.toml
app-ui-cute-llm/: Cargo.toml  icon.icns
app-ui-cute-llm/examples/: echo.rs
app-ui-gitlab-download-file/: Cargo.toml  icon.icns
app-ui-gitlab-download-file/examples/: download_cli.rs  download_ui.rs
app-ui-gitlab-download-file/src/: lib.rs
app-ui-open-link-in-1-hour/: Cargo.toml  icon.icns
app-ui-probe-videos/: Cargo.toml  icon.icns
app-ui-probe-videos/src/: lib.rs
app-ui-screenshot-every-five-seconds/: Cargo.toml
app-ui-screenshot-every-five-seconds/src/: main.rs
app-ui-system-stats/: Cargo.toml  README.DEV.md  icon.icns
app-ui-system-stats/src/: lib.rs  main.rs
app-ui-tunelling/: Cargo.toml
cli-excel-to-csv/: Cargo.toml
cli-search/: Cargo.toml
cli-search/src/: main.rs
fahrenheit_to_celsius/: Cargo.toml
fahrenheit_to_celsius/src/: main.rs
fahrenheit_to_celsius/static/: fahrenheit_to_celsius_wasm.d.ts  fahrenheit_to_celsius_wasm.js  fahrenheit_to_celsius_wasm_bg.wasm  fahrenheit_to_celsius_wasm_bg.wasm.d.ts  index.html  script.js
fahrenheit_to_celsius/static-html/: index.html
fahrenheit_to_celsius/static-wasm/: frontend.js
fahrenheit_to_celsius_egui/: Cargo.toml
fahrenheit_to_celsius_egui/src/common/: mod.rs
fahrenheit_to_celsius_frontend/: Cargo.toml
fahrenheit_to_celsius_frontend/src/: lib.rs
fahrenheit_to_celsius_server/static-wasm/: frontend.d.ts  frontend_bg.wasm  frontend_bg.wasm.d.ts  index.html
fahrenheit_to_celsius_wasm/: Cargo.toml  gen.sh
ffmpeg-ui/: Cargo.toml
ffmpeg-ui/src/: main.rs
ffmpeg-ui/video-recorder-for-mum/: Cargo.toml
get-location/: Cargo.toml
get-location/src/: lib.rs
get-location/src/location/: mod.rs
lib-egui-utils/: Cargo.toml
lib-egui-utils/examples/: example.rs
lib-egui-utils/src/: lib.rs
lib-egui-utils/src/mywidgets/: mod.rs
lib-ffmpeg-utils/: Cargo.toml
lib-ffmpeg-utils/examples/: list.rs
lib-ffmpeg-utils/src/: lib.rs
lib-ffmpeg-utils/src/devices/: mod.rs
lib-ffmpeg-utils/src/log/: mod.rs
lib-ffmpeg-utils/src/recorder/: mod.rs
lib-ffmpeg-utils/src/utils/: mod.rs
lib-ollama-utils/: Cargo.toml
lib-ollama-utils/src/: lib.rs
lib-os-utils/: Cargo.toml
lib-os-utils/src/: lib.rs
lib-os-utils/src/location/: mod.rs
lib-os-utils/src/serial/: mod.rs
lib-os-utils/src/speed/: mod.rs
lib-os-utils/src/wifi/: mod.rs
lib-wifi-ssid/: Cargo.toml
lib-wifi-ssid/src/: lib.rs
sample-wasm-plotting/: Cargo.toml  index.html
sample-wasm-plotting/src/: main.rs
sysinfo/: Cargo.toml
sysinfo/src/: main.rs
tunelling/: Cargo.toml  README.md  icon.icns
tunelling/src/: main.rs
ui-bmi-for-dummies/: Cargo.toml
ui-download-audio/: Cargo.toml  icon.icns
ui-download-audio/examples/: download.rs
ui-download-audio/resources/: yt-dlp
ui-extract-audio/: Cargo.toml  icon.icns
ui-extract-audio/src/: main.rs
ui-system-stats/: Cargo.toml
ui-system-stats/src/: main.rs
video-recorder-for-mum/: Cargo.toml  README.md  icon.icns
video-recorder-for-mum/src/: lib.rs  main.rs
wasm-command/src/common/: mod.rs
