[workspace]
resolver = "2"
members = [
    "app-ui-cute-llm",
    "tunelling",
    "ui-extract-audio",
    "app-ui-system-stats",
    "app-ui-screenshot-every-five-seconds",
    "lib-os-utils",
    "app-cli-excel-to-csv",
    "video-recorder-for-mum",
    "app-ui-bmi-for-dummies",
    "sample-wasm-plotting",
    "fahrenheit_to_celsius_server",
    "fahrenheit_to_celsius_wasm",
    "fahrenheit_to_celsius_egui",
    "app-ui-screenshot-every-five-seconds",
    "app-cli-show-usb-devices",
    "app-cli-convert-videos",
    "lib-egui-utils",
    "cli-search",
    "app-ui-probe-videos",
    "lib-ollama-utils",
    "app-convert-png-to-icns", ]

