[package]
name = "app-cli-convert-videos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
indicatif = "0.17"
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["image", "all_loaders"] }
rfd = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
image = "0.25.5"
egui-remixicon = "0.29.1"
lib_egui_utils = { path = "../lib-egui-utils" }
open = "5.3.1"