[package]
name = "app-ui-cute-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
lib_ollama_utils = { path = "../lib-ollama-utils" }
pollster = "0.4.0"
tokio = "1.41.1"
lib_egui_utils = { path = "../lib-egui-utils" }

[package.metadata.bundle.bin.app-ui-cute-llm]
name = "Cute Lama"
identifier = "info.hellonico.cutellama"
icon = ["icon.icns"] # Path to your app's icon (optional)
version = "1.0.0"
#resources = ["resources"] # Path to additional resources

[[bin]]
name = "app-ui-cute-llm"
path = "src/bin/ollama.rs"