[package]
name = "app-ui-open-link-in-1-hour"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] } # For async tasks
open = "5.3.1"
eframe = "0.29.1"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
rfd = "0.15.1"
regex = "1.11.1"
egui_extras = { version = "0.29.1", features = ["image", "all_loaders"] }
lib_egui_utils = { path = "../lib-egui-utils" }
lib-ffmpeg-utils = { path = "../lib-ffmpeg-utils" }

[package.metadata.bundle.bin.app-ui-open-link-in-1-hour]
name = "GoodNight"
identifier = "info.hellonico.goodnight"
icon = ["icon.icns"] # Path to your app's icon (optional)
version = "1.0.0"
#[cfg(target_os = "macos")]
resources = ["resources"]

[[bin]]
name = "app-ui-open-link-in-1-hour"
path = "src/bin/ui.rs"