[package]
name = "app-ui-probe-videos"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
serde_json = "1.0.133"
serde = { version = "1.0", features = ["derive"] }
eframe = "0.29.1"       # For building egui-based apps
egui = "0.29.1"
tokio = { version = "1.41.1", features = ["full"] } # For async tasks
futures = "0.3.31"
open = "5.3.1"
egui_extras = { version = "0.29.1", features = ["image", "all_loaders"] }
rfd = "0.15.1"
lib_egui_utils = { path = "../lib-egui-utils" }
dirs = "5.0.1"
chrono = "0.4.38"
trash = "5.2.0"

[package.metadata.bundle.bin.app-ui-probe-videos]
name = "Probe"
identifier = "info.hellonico.probe"
icon = ["icon.icns"] # Path to your app's icon (optional)
version = "1.0.0"

[[bin]]
name = "app-ui-probe-videos"
path = "src/bin/ui.rs"