[package]
name = "screenshot-every-five-seconds"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1" # Ensure compatibility with your version
eframe = "0.29.1"
image = {  version = "0.25.5", features = ["jpeg", "png"] }
egui_extras = { version = "0.29.1", features = ["image", "all_loaders"] }
tempfile = "3.1"