[package]
name = "syshello"
version = "0.2.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
egui_extras="0.29.1"
egui-winit = "0.29.1"
sysinfo = { version = "0.29.11" }
eframe = "0.29.1"
get_if_addrs = "0.5.3"
#wifiscanner = "0.5.1"
lib_os_utils = { path = "../lib-os-utils" }
battery = "0.7.8"
lib_egui_utils = { path = "../lib-egui-utils" }