[package]
name = "app-ui-system-stats"
version = "0.2.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
egui_extras="0.29.1"
egui-winit = "0.29.1"
sysinfo = { version = "0.29.11" }
eframe = "0.29.1"
get_if_addrs = "0.5.3"
#wifiscanner = "0.5.1"
lib_os_utils = { path = "../lib-os-utils" }
battery = "0.7.8"
lib_egui_utils = { path = "../lib-egui-utils" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.bundle.bin.app-ui-system-stats]
name = "Syster"
identifier = "info.hellonico.syster"
icon = ["icon.icns"] # Path to your app's icon (optional)
version = "1.0.0"

[[bin]]
name = "app-ui-system-stats"
path = "src/bin/main.rs"