[package]
name = "lib_ollama_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
surf = { version = "2.3.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }

#[dev-dependencies]
eframe = "0.29.1"
clap = { version = "4.5.23", features = ["derive"] }