[package]
name = "lib_os_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"  # For conditional compilation based on the platform
reqwest = { version = "0.12.9", features = ["blocking", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"