[package]
name = "tunelling"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.24.1"}
eframe = "0.24.1"
tokio = { version = "1", features = ["full"] }  # For async process handling
# https://github.com/retep998/winapi-rs
# winuser
winapi = { version = "0.3.9", features = ["winuser"] }
csv = "1.3.0"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.0"
rfd = "0.15.0"
dirs = "5.0.1"