[package]
name = "tunelling"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.29.1"}
egui_extras = { version = "0.29.1", features = ["image", "all_loaders"] }
eframe = "0.29.1"
tokio = { version = "1", features = ["full"] }  # For async process handling
# https://github.com/retep998/winapi-rs
# winuser
winapi = { version = "0.3.9", features = ["winuser"] }
csv = "1.3.1"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
rfd = "0.15.0"
dirs = "5.0.1"
lib_egui_utils = { path = "../lib-egui-utils" }