[package]
name = "bmi-for-dummies"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.24"}
eframe = "0.24"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.8"

[[bin]]
name = "simple"
path = "src/bin/main.rs"


[[bin]]
name = "two"
path = "src/bin/two.rs"
