[package]
name = "syshello"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
egui_extras="0.29.1"
egui-winit = "0.29.1"
sysinfo = "0.29"
eframe = "0.29.1"
get_if_addrs = "0.5.3"
#wifiscanner = "0.5.1"
lib_wifi_ssid = { path = "../lib-wifi-ssid" }
get_location = { path = "../get-location" }