[package]
name = "video-recorder-for-mum"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24.1"
egui-winit = "0.24.1"
eframe = "0.24.1"
chrono = "0.4.38"
egui_extras = { version = "0.24.1", features = ["image", "all_loaders"] }
image = {  version = "0.25.5", features = ["webp", "png"] }
config = "0.14.1"

[[bin]]
name = "recordingcli"
path = "src/bin/recordingcli.rs"


[[bin]]
name = "recordingui"
path = "src/bin/recordingui.rs"
