[package]
name = "video-recorder-for-mum"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
winapi = { version = "0.3.5", features = ["winnt"] }

#egui-winit = "0.24.1"
#[target.'cfg(windows)'.dependencies]
eframe = "0.29.1"
chrono = "0.4.38"
egui_extras = { version = "0.29.1", features = ["image", "all_loaders"] }
image = {  version = "0.24.9", features = ["png"] }
config = "0.14.1"

[[bin]]
name = "recordingcli"
path = "src/bin/recordingcli.rs"


[[bin]]
name = "recordingui"
path = "src/bin/recordingui.rs"


[[bin]]
name = "audio"
path = "src/bin/audio.rs"
