[package]
name = "video-recorder-for-mum"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
chrono = "0.4.38"

eframe = "0.29.1"
#chrono = "0.4.38"
egui_extras = { version = "0.29.1", features = ["image", "all_loaders"] }
# does not compile on windows for newer image version
image = {  version = "0.24.9", features = ["png"] }
config = "0.14.1"
clap = "4.5.21"
notify-rust = "4.11.3"
lib_egui_utils = { path = "../lib-egui-utils" }
# https://github.com/RustAudio/cpal/issues/342
# probably do not need all those features... this is to avoid opening a shell
#[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["audiosessiontypes", "audioclient", "coml2api", "combaseapi", "debug", "devpkey", "handleapi", "ksmedia", "mmdeviceapi", "objbase", "std", "synchapi", "winbase", "winuser"] }


[[bin]]
name = "recordingcli"
path = "src/bin/recordingcli.rs"


[[bin]]
name = "screen-recorder-for-mum"
path = "src/bin/recordingui.rs"

[[bin]]
name = "audio"
path = "src/bin/audio.rs"
